--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -20,6 +20,7 @@
         <div class="controls">
             <button id="prev-button" class="nav-button">Previous</button>
             <button id="next-button" class="nav-button">Next</button>
+            <button id="fullscreen-button" class="nav-button">Fullscreen</button>
         </div>
         
         <div class="admin-panel">
