Enhance photo display by adding original filename from NAS and updating UI elements; adjust styles for improved layout and button design.

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -18,15 +18,14 @@
         </div>
         
         <div class="controls">
-            <button id="prev-button" class="nav-button">Previous</button>
-            <button id="next-button" class="nav-button">Next</button>
-            <button id="fullscreen-button" class="nav-button">Fullscreen</button>
+            <button id="prev-button" class="nav-button"><span class="chevron">&#10094;</span></button>
+            <button id="next-button" class="nav-button"><span class="chevron">&#10095;</span></button>
         </div>
         
         <div class="admin-panel">
+            <button id="fullscreen-button">Fullscreen</button>
             <button id="scan-button">Scan NAS</button>
             <button id="fetch-button">Fetch Photos</button>
-            <input type="number" id="fetch-count" min="1" max="100" value="10">
             <button id="show-database-button">Show All DB Photos</button>
             <span id="status-message"></span>
         </div>
