Enhance admin dashboard statistics: add local photos count and update UI elements

--- a/frontend/public/admin.html
+++ b/frontend/public/admin.html
@@ -41,6 +41,7 @@
         }
         
         .admin-button-group {
+            margin-top: 20px;
             display: flex;
             flex-direction: column;
             gap: 10px;
@@ -141,8 +142,8 @@
                         <div class="stats-value" id="stats-last-scan">Loading...</div>
                     </div>
                     <div class="stats-item">
-                        <div class="stats-label">Active Photos:</div>
-                        <div class="stats-value" id="stats-active-photos">Loading...</div>
+                        <div class="stats-label">Photos in Slideshow:</div>
+                        <div class="stats-value" id="stats-local-photos">Loading...</div>
                     </div>
                     <div class="stats-item">
                         <div class="stats-label">Soft-Deleted Photos:</div>
