Add toggle button for navigation visibility and update styles

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -26,6 +26,13 @@
                         <span></span>
                     </button>
                     <div id="dropdown-menu" class="dropdown-menu">
+                        <button id="toggle-nav-button" title="Show/hide navigation buttons">
+                            <svg width="14" height="14" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                <path d="M15.41 7.41L14 6l-6 6 6 6 1.41-1.41L10.83 12z" fill="currentColor"/>
+                                <path d="M8.59 16.59L10 18l6-6-6-6-1.41 1.41L13.17 12z" fill="currentColor"/>
+                            </svg>
+                            Toggle Nav
+                        </button>
                         <button id="fullscreen-button" title="Toggle fullscreen mode">
                             <svg width="14" height="14" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                                 <path d="M3 3V9H5V5H9V3H3ZM3 21H9V19H5V15H3V21ZM21 3H15V5H19V9H21V3ZM15 21H21V15H19V19H15V21Z" fill="currentColor"/>
