Implement job tracking for NAS scan and photo fetch operations with background process indicators

--- a/frontend/public/admin.html
+++ b/frontend/public/admin.html
@@ -80,6 +80,9 @@
             <!-- Status message shown in all tabs -->
             <div id="status-message" class="status-message"></div>
             
+            <!-- Background process info panel -->
+            <div id="background-processes" class="background-processes-panel" style="display: none;"></div>
+            
             <a href="/" class="back-link">Back to Slideshow</a>
         </div>
     </div>
