--- a/frontend/public/admin.html
+++ b/frontend/public/admin.html
@@ -97,6 +97,7 @@
             <div class="modal-body">
                 <div class="modal-stats">
                     <span id="photo-count"></span>
+                    <div id="pagination-controls"></div>
                 </div>
                 <div class="table-container">
                     <table id="photos-table">
